--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "test_project",
-  "version": "0.0.0",
-  "private": true,
+  "name": "links-jdhillen-com",
+  "version": "2.0.3",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest"
+    "serve": "vite preview",
+    "format": "npx prettier --check .",
+    "format:write": "npx prettier --write ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.41.1",
     "pinia": "^2.1.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/test-utils": "^2.4.6",
-    "jsdom": "^24.1.0",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1",
-    "vitest": "^1.6.0"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/compiler-sfc": "^3.4.21",
+    "sass": "^1.72.0",
+    "vite": "^5.2.7"
   }
 }
